# tvstatic-archive

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md
apps/sllv-android/: README.md  settings.gradle.kts
apps/sllv-android/app/: build.gradle.kts  cmake.gradle.kts
apps/sllv-android/app/src/main/: AndroidManifest.xml
apps/sllv-android/app/src/main/cpp/: CMakeLists.txt  sllv_jni.c
apps/sllv-android/app/src/main/java/com/fizzolas/sllv/: MainActivity.kt  Native.kt  NativeJni.kt  SafBridge.kt  SllvNative.java
apps/sllv-android/app/src/main/res/layout/: activity_main.xml
apps/sllv-desktop/: index.html  package.json  vite.config.js
apps/sllv-desktop/src/: main.js
apps/sllv-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/sllv-desktop/src-tauri/src/: main.rs
crates/sllv-cli/: Cargo.toml
crates/sllv-cli/src/: ffmpeg.rs  interactive.rs  main.rs
crates/sllv-core/: Cargo.toml
crates/sllv-core/src/: fec.rs  ffmpeg.rs  lib.rs  manifest.rs  pack.rs  palette.rs  profile.rs  raster.rs  raster_find_color_centroid_fix.patch  warp.rs
crates/sllv-ffi/: Cargo.toml
crates/sllv-ffi/src/: lib.rs
crates/sllv-gui/: Cargo.toml
crates/sllv-gui/src/: main.rs  state.rs  ui.rs  ui_impl.rs
docs/: ANDROID.md  CLI.md  GETTING_STARTED.md  GUI.md  TROUBLESHOOTING.md  WORKFLOWS.md
packaging/: README.md
scripts/: build.bat  build.ps1  build.sh  setup-windows.ps1
