[package]
name = "sllv-core"
version = "0.0.11"
edition = "2021"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
image = { version = "0.24", default-features = false, features = ["png"] }
hex = "0.4"

walkdir = "2"
tar = "0.4"

reed-solomon-erasure = "6"
crc32fast = "1"

nalgebra = "0.33"
